Remove special case for customers, instead fix overflow on tables and fix calendar cropping properly

--- a/admin-dev/themes/new-theme/scss/components/_grid.scss
+++ b/admin-dev/themes/new-theme/scss/components/_grid.scss
@@ -146,8 +146,8 @@ table .column-filters td:last-child .grid-reset-button {
       }
     }
   }
-  .table-responsive {
-    overflow-x: inherit;
+  .table-responsive .row {
+    margin: 0;
   }
 }
 
